# sisfus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
orchestration/prefect/: authory_tasks.py  bbc_tasks.py
src/: authory_tasks.py  main.py  utils.py
src/base/: config.py  utils.py
src/client/: bq.py
src/configs/: settings.py
src/models/: base.py  web_pages.py
src/scrape/: test.sh
src/scrape/articles/: settings.py
src/scrape/articles/spiders/: articles.py
src/scraper/: items.py  middlewares.py  pipelines.py  processors.py  scrapy.cfg  settings.py
src/scraper/articles/: items.py  pipelines.py  processors.py  settings.py  utils.py
src/scraper/articles/spiders/: bbc.py
src/scraper/spiders/articles/: __init__.py
src/scraping/: scratch.html  settings.py
src/scraping/spiders/: articles.py
src/services/: bq.py
src/sisfus/: curl.sh
src/sisfus/articles/: pipelines.py
src/sisfus/articles/spiders/: bbc.py
src/tasks/: authory_tasks.py  bbc_tasks.py  embedding_tasks.py
tasks/: authory_tasks.py  bbc_tasks.py  embedding_tasks.py
tests/: fixtures.py  test_bq.py  test_embedding_tasks.py  test_scraping_bbc_articles.py
tests/data/html/: bbc-future-28-05-2024.html
