[project]
name = "scraper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Matekole", email = "github@matekole.com"},
]
dependencies = [
    "pydantic>=2.7.1",
    "scrapy>=2.11.1",
    "dotenv>=0.0.5",
    "pydantic-settings>=2.2.1",
    "responses>=0.25.0",
    "google-cloud-bigquery>=3.24.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "rich>=13.7.1",
    "pytest>=8.1.1",
    "validators>=0.28.3",
    "pytest-twisted>=1.14.1",
    "pytest-asyncio>=0.23.7",
]
[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["./src"]
log_cli = true

[tool.black]
skip-string-normalization = true
